# Password-Manager-CLI

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md  SPEC.md
.github/workflows/: ci.yml
src/: crypto.rs  lib.rs  main.rs  models.rs  storage.rs  vault.rs
tests/: cli_flow.rs  crypto_storage.rs
