[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.0"
rand = "0.8"
argon2 = "0.4"
aes-gcm = "0.10"
base64 = "0.21"
zeroize = "1.5"
clipboard = { version = "0.5", optional = true }

anyhow = "1.0"
dirs = "4.0"
sha2 = "0.10"

[features]
default = []
clipboard = ["dep:clipboard"]
